// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload accepts a function as onDOMChange prop 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  <button
    aria-label={undefined}
    className="grommetux-button"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="grommetux-button__label"
    >
      Upload a file
    </span>
  </button>
  <input
    className="grommetux-fileupload__input"
    multiple={false}
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`FileUpload has correct default options 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  <button
    aria-label={undefined}
    className="grommetux-button"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="grommetux-button__label"
    >
      Upload a file
    </span>
  </button>
  <input
    className="grommetux-fileupload__input"
    multiple={false}
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`FileUpload should create a snapshot with full screen drop target set to true 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  <button
    aria-label={undefined}
    className="grommetux-button"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="grommetux-button__label"
    >
      Upload a file
    </span>
  </button>
  <input
    className="grommetux-fileupload__input"
    multiple={false}
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`FileUpload should create a snapshot with label props 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  <button
    aria-label={undefined}
    className="grommetux-button"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="grommetux-button__label"
    >
      Testing
    </span>
  </button>
  <input
    className="grommetux-fileupload__input"
    multiple={false}
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`FileUpload should create a snapshot with multiple prop set to true 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  <button
    aria-label={undefined}
    className="grommetux-button"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="grommetux-button__label"
    >
      Upload a file
    </span>
  </button>
  <input
    className="grommetux-fileupload__input"
    multiple={true}
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`FileUpload should create a snapshot with preview prop set to false 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  <button
    aria-label={undefined}
    className="grommetux-button"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="grommetux-button__label"
    >
      Upload a file
    </span>
  </button>
  <input
    className="grommetux-fileupload__input"
    multiple={false}
    onChange={[Function]}
    type="file"
  />
</div>
`;
